# lightgbm-system

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: LightGBMWrapper.h
src/: LightGBMWrapper.cpp  main.cpp
